objects/Product2.object
<CustomObject>
    <fields>
        <fullName>New_Product_1__c</fullName>
        <label>New Product 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>New_Product_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Product_2__c</fullName>
        <label>New Product 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product_3__c</fullName>
        <label>New Product 3</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevCloudExternalID__c</fullName>
        <externalId>true</externalId>
        <label>RevCloudExternalID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevCloud_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RevCloud Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevMgmtExternalID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID for migration purposes</inlineHelpText>
        <label>RevMgmtExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Create_1__c</fullName>
        <label>Test Create 1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>CPQ_Product_Record_Type_1</fullName>
        <active>true</active>
        <label>CPQ Product Record Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Product_Record_Type_1</fullName>
        <active>true</active>
        <label>Standard Product Record Type 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>